src/objects/Pet__c.object
<CustomObject>
    <fields>
        <fullName>Current_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current Owner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Pets</relationshipLabel>
        <relationshipName>Pets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>IF(Current_Owner__c &lt;&gt; null, &apos;Adopted&apos;,&apos;Available for Adoption&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Times_Adopted__c</fullName>
        <label>Times Adopted</label>
        <summaryForeignKey>Adoption__c.Pet__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Pet</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Pet Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>